# stegachain

./: .gitignore  README.md
stegachain-engine/: .gitignore  Cargo.toml  README.md
stegachain-engine/src/: crypto.rs  hash.rs  lib.rs  stego.rs
stegachain-frontend/: .env.example  .gitignore  .prettierignore  .prettierrc  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
stegachain-frontend/src/: App.tsx  index.css
stegachain-frontend/src/components/: FileDropzone.tsx  HashDisplay.tsx  Layout.tsx  ReceiverFlow.tsx  SenderFlow.tsx  Spinner.tsx  StepCard.tsx  WalletButton.tsx
stegachain-frontend/src/config/: chains.ts  contract.ts
stegachain-frontend/src/hooks/: useCrypto.ts  useHash.ts  useLogHash.ts  useStego.ts  useVerify.ts  useWallet.ts
stegachain-frontend/src/lib/: ethers.ts  notifications.ts  wasm.ts
stegachain-frontend/src/pages/: HomePage.tsx  ReceiverPage.tsx  SenderPage.tsx
stegachain-frontend/src/types/: global.d.ts  vite-env.d.ts
stegachain-frontend/src/wasm/: README.md  stegachain_engine.d.ts  stegachain_engine.js  stegachain_engine_bg.wasm  stegachain_engine_bg.wasm.d.ts
stegachain-smart-contract/: .env.example  .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
stegachain-smart-contract/contracts/: StegaChain.sol
stegachain-smart-contract/scripts/: deploy.ts
stegachain-smart-contract/test/: StegaChain.test.ts
