[package]
name    = "stegachain-engine"
version = "0.1.0"
edition = "2021"
description = "Crypto + steganography core for StegaChain — compiles to WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
aes-gcm      = "0.10"
sha2         = "0.10"
# getrandom with `js` feature is required for OsRng to work in a browser WASM context
getrandom    = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
